# MiMAv1.0_Wavenet

./: CMakeLists.txt  README.md  mima1.0_coupled_runscipt.sh
cmake/: FindNetCDF.cmake
docs/: GettingStarted.md
exp/: Compile_Sherlock_LM.sh  Sherlock_runscript.sh  compilescript_SE3Mazama.bs  compilescript_Sherlock.bs  mima1.0_coupled_runscipt.sh  mima_coupled_runscript.sh  mkmf.template.Sherlock  out.txt  path_names
input/: diag_table  input.nml  input_default.nml
src/atmos_coupled/: CMakeLists.txt
src/atmos_param/: CMakeLists.txt
src/atmos_param/damping_driver/: damping_driver.f90
src/atmos_param/dd_drag/: dd_drag.F90
src/atmos_param/physics_driver/: physics_driver.f90
src/atmos_param/prescribed_heating/: prescribed_heating.f90
src/atmos_param/qflux/: qflux.f90
src/atmos_shared/: CMakeLists.txt
src/atmos_spectral/: CMakeLists.txt
src/coupler/: CMakeLists.txt  simple_surface.f90
src/shared/: CMakeLists.txt
wavenet/: wavenet.py
wavenet/dd_args/: args.pkl
wavenet/models/: wavenet_2.43no_quant.hdf5
wavenet/models/full_features/: gwfu_scaler.pkl  gwfv_scaler.pkl  tensors_scaler.pkl
wavenet/models/uv_temp_10/: scaler_gwfu.pkl  scaler_gwfv.pkl  scaler_tensors.pkl
wavenet/models/uv_temp_final/: scaler_gwfu.pkl  scaler_gwfv.pkl  scaler_tensors.pkl
wavenet/models/wavenet_1/: gwfu_scaler.pkl  gwfv_scaler.pkl  tensors_scaler.pkl
wavenet/models/wavenet_2/: combined_scaler.pkl  tensors_scaler.pkl  wavenet_2.hdf5
wavenet/models/wind_temp/: scaler_tensors.pkl
